Created the header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<header></header>
-<hello name="{{ name }}"></hello>
-<p>
-  Emrile home
-</p>
+<app-header></app-header>
+<div class="content">
+  <hello name="{{ name }}"></hello>
+  <p>
+    Emrile home test
+  </p>
+</div>
