--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* Add application styles & imports to this file! */
+body{
+  margin: 0;
+}
+body, button, html {
+    font-family: Roboto,Helvetica,Arial,sans-serif;
+}
+.header{
+  width: 100%;
+  padding: 20px 10px 20px 10px;
+  background-color: #ccc;
+  margin: 0;
+  color: #555;
+}
+
+.content{
+  margin: 10px;
+}
+
